# starz

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pipeline-state.json  pyproject.toml
.claude/: .skill-invoked
.context/: prd.md  project-overview.md  sprint-plan.md  task-state.json
.context/spec/: requirements.json
.pixl/: project.json
src/starz/: cli.py  config.py  server.py
src/starz/db/: __init__.py  client.py  schema.sql
src/starz/endpoints/: __init__.py  chat.py  graph.py  reports.py  repos.py  search.py  sync.py
src/starz/schemas/: __init__.py  chat.py  repo.py
src/starz/services/: categorizer.py  chat.py  ecosystems.py  embeddings.py  export.py  github.py  graph.py  reports.py  search.py  trends.py
tests/: test_categorizer.py  test_config.py  test_db.py  test_ecosystems.py  test_embeddings.py  test_export.py  test_github_service.py  test_graph_deps.py  test_schemas.py  test_search.py  test_trends.py
web/: next.config.ts  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/discover/: page.tsx
web/src/app/graph/: page.tsx
web/src/components/: category-filter.tsx  chat-panel.tsx  insights-panel.tsx  nav-header.tsx  repo-card.tsx  repo-feed.tsx  repo-grid.tsx  repo-row.tsx  search-bar.tsx  stats-strip.tsx  sync-button.tsx
web/src/lib/: api.ts  format.ts  lang-colors.ts
