[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starz"
version = "0.1.0"
description = "AI-powered GitHub stars manager -- search, categorize, and chat with your starred repos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hamza Mounir" },
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.42.0",
    "openai>=1.12.0",
    "sqlite-vec>=0.1.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
starz = "starz.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/starz"]

[tool.hatch.build.targets.wheel.force-include]
"src/starz/static" = "starz/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
